# study

./: .gitignore  c_practice  c_practice.c  q4_9.java
00_Languages/04_Python/: memo.ipynb
00_coding_test/: DescNum.java
01_Java/_garage/: example_processbuilder.java
02_Dart/: 01_Dart_inroduction.md
03_AI/04_LLM/00_LangChainLangGraph/01_doit_LLM을_활용한_AI_에이전트_개발_입문/08_랭체인으로_에이전트_만들기/sec01_02_03/: main.py  pyproject.toml  sec02_lcel.ipynb  sec04_langchain_tool_stream.ipynb
03_AI/04_LLM/00_LangChainLangGraph/01_doit_LLM을_활용한_AI_에이전트_개발_입문/08_랭체인으로_에이전트_만들기/sec01_02_03/core/: openai_model.py
03_AI/04_LLM/00_LangChainLangGraph/01_doit_LLM을_활용한_AI_에이전트_개발_입문/08_랭체인으로_에이전트_만들기/sec01_02_03/schemas/: tool_schemas.py
03_AI/04_LLM/00_LangChainLangGraph/01_doit_LLM을_활용한_AI_에이전트_개발_입문/08_랭체인으로_에이전트_만들기/sec01_02_03/tools/: _get_current_time.py  _get_yf_stock_info.py  generate_chat_id.py
03_AI/04_LLM/00_LangChainLangGraph/01_doit_LLM을_활용한_AI_에이전트_개발_입문/14_랭그래프로_목차를_작성하는_멀티에이전트_만들기/sec01/: book_writer.py  book_writer_0.py  book_writer_1.py  book_writer_2.py  book_writer_3.py  pyproject.toml
03_AI/04_LLM/00_LangChainLangGraph/01_doit_LLM을_활용한_AI_에이전트_개발_입문/14_랭그래프로_목차를_작성하는_멀티에이전트_만들기/sec01/config/: config.py
03_AI/04_LLM/00_LangChainLangGraph/01_doit_LLM을_활용한_AI_에이전트_개발_입문/14_랭그래프로_목차를_작성하는_멀티에이전트_만들기/sec01/data/: outline.md  state.json
03_AI/04_LLM/00_LangChainLangGraph/04_cafe_rag/: .gitignore  README.md  main.py  pyproject.toml
03_AI/04_LLM/00_LangChainLangGraph/04_cafe_rag/config/: config.ini  config.py  secret.ini.template
03_AI/04_LLM/00_LangChainLangGraph/04_cafe_rag/documents/: brand_notice.txt  cafe_menu.txt  faq.txt  reservation_event.txt  store_policy.txt
03_AI/04_LLM/00_LangChainLangGraph/04_cafe_rag/graph/: builder.py  nodes.py  state.py
03_AI/04_LLM/00_LangChainLangGraph/04_cafe_rag/llm/: chat_model.py  embedding.py
03_AI/04_LLM/00_LangChainLangGraph/04_cafe_rag/prompts/: intent_classify_v1.0.txt  llm_response_v1.0.txt
03_AI/04_LLM/00_LangChainLangGraph/04_cafe_rag/retrieval/: __init__.py  ingest.py  vectorstores.py
03_C/: .gitignore  sample.c
04_python/19_hatch/my-package/: LICENSE.txt  __init__.py  operations.py  pyproject.toml
04_python/19_hatch/my-package/src/my_package.egg-info/: PKG-INFO  requires.txt
(+914 files in other folders)
