[project]
name = "personal-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "pydantic>=2.12.5",
    "pytz>=2025.2",
    "streamlit>=1.53.1",
    "tabulate>=0.9.0",
    "yfinance>=1.1.0",
]
